Add user option for output file name/table name to query_impala and cleaned up connection string Added ensembl annotatoin to nbs_genes

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -485,10 +485,18 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "args['output'] = 'impala_table'"
+      "args['output'] = 'impala_table'\n",
+      "\n",
+      "#if saving as file, enter desired output file name as file_name.csv\n",
+      "#and uncomment the following line\n",
+      "output_file_name = \"test_results.csv\"\n",
+      "\n",
+      "#if saving as impala table, enter desired table name as database_name.table_name \n",
+      "#and uncomment the following line\n",
+      "output_db_name = \"users_selasady.test_results\""
      ],
      "language": "python",
-     "prompt_number": 17
+     "prompt_number": 41
     },
     {
      "cell_type": "heading",
@@ -809,18 +817,7 @@
       "\n",
       "test_query = \"SELECT * FROM public_hg19.clinvar LIMIT 5\"\n",
       "cur.execute(test_query)\n",
-      "query_results = as_pandas(cur)\n",
-      "\n",
-      "if output == 'tsv':\n",
-      "    print \"Saving results to a tsv file as {}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\")))\n",
-      "    query_results.to_csv(\"{}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\"))), sep='\\t', index=False)\n",
-      "elif output == 'impala_table':\n",
-      "    print \"testing\"\n",
-      "    cur.execute(\"CREATE TABLE users_selasady.{} AS {}\".format(\"query_results_{}\".format(datetime.date.today().strftime(\"%m%d%y\")), test_query))\n",
-      "elif output == 'both':\n",
-      "    print \"both\"\n",
-      "else: \n",
-      "    print \"Check your argument for 'output' and try again.\""
+      "query_results = as_pandas(cur)"
      ],
      "language": "python",
      "prompt_number": 38
@@ -839,7 +836,16 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      ""
+      "if output == 'tsv':\n",
+      "    print \"Saving results to a tsv file as {}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\")))\n",
+      "    query_results.to_csv(\"{}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\"))), sep='\\t', index=False)\n",
+      "elif output == 'impala_table':\n",
+      "    print \"Saving results to an impala table called {}\"\n",
+      "    cur.execute(\"CREATE TABLE users_selasady.{} AS {}\".format(\"query_results_{}\".format(datetime.date.today().strftime(\"%m%d%y\")), test_query))\n",
+      "elif output == 'both':\n",
+      "    print \"both\"\n",
+      "else: \n",
+      "    print \"Check your argument for 'output' and try again.\""
      ],
      "language": "python"
     },
