Updated query_impala save options Updated filtering query for nbs_genes

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -286,13 +286,11 @@
       "from impala.dbapi import connect\n",
       "\n",
       "# to connect to specific database, use the database argument\n",
-      "conn=connect(host='glados19', port=21050, database=\"public_hg19\")\n",
+      "conn=connect(host='glados19', port=21050, database=\"p7_platform\")\n",
       "\n",
       "# create a cursor object to interact with the db\n",
       "cur = conn.cursor()\n",
       "\n",
-      "# select a particular database to use\n",
-      "cur.execute('USE p7_platform')\n",
       "# view tables in selected database \n",
       "# if no db is selected, you will see tables in default db\n",
       "cur.execute('SHOW TABLES')\n",
@@ -300,7 +298,7 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 10
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -837,15 +835,18 @@
      "outputs": [],
      "input": [
       "if output == 'tsv':\n",
-      "    print \"Saving results to a tsv file as {}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\")))\n",
-      "    query_results.to_csv(\"{}/{}\".format(os.getcwd(), \"query_results_{}.tsv\".format(datetime.date.today().strftime(\"%m%d%y\"))), sep='\\t', index=False)\n",
+      "    print \"Saving results to a tsv file as {}/{}\".format(os.getcwd(), output_file_name)\n",
+      "    query_results.to_csv(\"{}/{}\".format(os.getcwd(), output_file_name), sep='\\t', index=False)\n",
       "elif output == 'impala_table':\n",
-      "    print \"Saving results to an impala table called {}\"\n",
-      "    cur.execute(\"CREATE TABLE users_selasady.{} AS {}\".format(\"query_results_{}\".format(datetime.date.today().strftime(\"%m%d%y\")), test_query))\n",
+      "    print \"Saving results to an impala table called {}\".format(output_db_name)\n",
+      "    cur.execute(\"CREATE TABLE {} AS {}\".format(output_db_name, test_query))\n",
       "elif output == 'both':\n",
-      "    print \"both\"\n",
+      "    print \"Saving results to a tsv file as {}/{}\".format(os.getcwd(), output_file_name)\n",
+      "    query_results.to_csv(\"{}/{}\".format(os.getcwd(), output_file_name), sep='\\t', index=False)\n",
+      "    print \"Saving results to an impala table called {}\".format(output_db_name)\n",
+      "    cur.execute(\"CREATE TABLE {} AS {}\".format(output_db_name, test_query))\n",
       "else: \n",
-      "    print \"Check your argument for 'output' and try again.\""
+      "    print \"Check your argument(s) for 'output' and try again.\""
      ],
      "language": "python"
     },
@@ -875,6 +876,16 @@
      ],
      "language": "python",
      "prompt_number": 241
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
    ]
   }
