Creating module for querying impala Added ensembl annotaiton to nbs_genes, next annotate with nbs gene list

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -111,7 +111,12 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "args['subject_id'] = 'all'"
+      "#uncomment this line to enter a list of sample id's\n",
+      "args['subject_id'] = 'all'\n",
+      "\n",
+      "#uncomment the following lines and edit the file path to upload txt\n",
+      "#subject_file = open('list_of_subjects', 'r').readlines()\n",
+      "#subject_id = map(str.strip, subject_file)"
      ],
      "language": "python",
      "prompt_number": 5
@@ -128,9 +133,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- List of genes, enter as comma-separaterd list with no spaces: 'GENE1,GENE2,GENE3'  \n",
-      "- Text file of genes of interest: enter file path and name to text file containing one gene per line  \n",
-      "- For all genes, enter 'all'  \n",
+      "To enter a list of genes:   \n",
+      "- Enter as comma-separaterd list with no spaces: 'GENE1,GENE2,GENE3'  \n",
+      "\n",
+      "To upload a text file of genes:   \n",
+      "- Save genes as a .txt file containing one gene per line    \n",
+      "- Enter full path and file name below\n",
+      "\n",
+      "To search for all genes:   \n",
+      "- Enter 'all'  \n",
       "\n",
       "Example:  \n",
       "'genes':'HOX%,TRT1'"
@@ -142,7 +153,12 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "args['genes'] = 'BRCA1,TRT1,SON%,HOX%'"
+      "#uncomment this line to enter a list of genes\n",
+      "args['genes'] = 'BRCA1,TRT1,SON%,HOX%'\n",
+      "\n",
+      "#uncomment the following lines and edit the file path to upload txt\n",
+      "#gene_file = open('list_of_genes', 'r').readlines()\n",
+      "#genes = map(str.strip, gene_file)"
      ],
      "language": "python",
      "prompt_number": 6
@@ -457,6 +473,36 @@
      ],
      "language": "python",
      "prompt_number": 16
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Additional parameters"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Certain tables, such as kaviar, require additional custom parameters that you may enter here. Uncomment relevant arguments, if you would like to use additional arguments that are not listed here, please contact me (Summer) at selasady@systemsbiology.org. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "#specify kaviar frequency cutoff as '10' for 10%\n",
+      "#kaviar = '10'\n",
+      "\n",
+      "#keep only non-conflicted significant clinvar variants\n",
+      "#this will keep clinvar variants rated 4 or 5, but never 2 or 3\n",
+      "#clinvar = 'significant'"
+     ],
+     "language": "python"
     },
     {
      "cell_type": "heading",
@@ -861,9 +907,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- save as file,table or both\n",
-      "- Upload text file instead of arg\n",
-      "- Add additional filters/annotations such as kaviar pct"
+      "- Add additional filters/annotations such as kaviar pct\n",
+      "- Test with text files for subject and gene\n",
+      "- Test with different parameters\n",
+      "- Add to __main__module and clean up layout\n",
+      "- Test again"
      ]
     },
     {
