Fine-tuning functions

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -218,7 +218,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If your search is restricted to a certain chromosome, enter it here.    \n",
+      "If your search is restricted to a certain chromosome, enter it here. Narrowing your search to specific chromosomes will reduce the amount of time it takes to complete your query. \n",
       "\n",
       "Examples:  \n",
       "'chrom':'8'  \n",
@@ -314,7 +314,7 @@
       "    print db"
      ],
      "language": "python",
-     "prompt_number": 42
+     "prompt_number": 45
     },
     {
      "cell_type": "code",
@@ -627,7 +627,15 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "WHERE (p7_platform.wgs_comgen_variant.sample_id = '%M' OR p7_platform.wgs_comgen_variant.sample_id = '%F' OR p7_platform.wgs_comgen_variant.sample_id = '%NB') AND (public_hg19.ensembl_genes.gene_name = 'BRCA1' OR public_hg19.ensembl_genes.gene_name = 'TRT1') OR (public_hg19.ensembl_genes.gene_name LIKE 'SON%' OR public_hg19.ensembl_genes.gene_name LIKE 'HOX%')) AND p7_platform.wgs_comgen_variant.gt = 'hom' AND p7_platform.wgs_comgen_variant.chrom = '8'\n"
+       ]
+      }
+     ],
      "input": [
       "# assign user args to a variable\n",
       "locals().update(args)\n",
@@ -651,22 +659,23 @@
       "final_query = []\n",
       "\n",
       "# merge query arguments\n",
-      "def merge_query(query_arg):\n",
+      "def merge_query(query_arg, merge_list):\n",
       "    if query_arg:\n",
-      "        final_query.append(query_arg)\n",
+      "        merge_list.append(query_arg)\n",
+      "    impala_query= ' '.join(merge_list).replace('AND', 'WHERE', 1)\n",
+      "    return impala_query\n",
       " \n",
       "# create list to apply function on   \n",
       "query_list = [member_query, subject_query, genes_query, gt_query,chrom_query]\n",
       "\n",
       "# apply function to list of query statements\n",
       "for query in query_list:\n",
-      "    merge_query(query)\n",
+      "    merge_query(query, final_query)\n",
       "\n",
-      "# create final impala query, replacing first item with WHERE instead of AND\n",
-      "impala_query= ' '.join(final_query).replace('AND', 'WHERE', 1)"
+      "print impala_query\n"
      ],
      "language": "python",
-     "prompt_number": 19
+     "prompt_number": 50
     },
     {
      "cell_type": "heading",
@@ -680,10 +689,23 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "SELECT p7_platform.wgs_comgen_variant.*, public_hg19.ensembl_genes.gene_name FROM p7_platform.wgs_comgen_variant LEFT JOIN public_hg19.ensembl_genes USING (start,stop) WHERE (p7_platform.wgs_comgen_variant.start >= public_hg19.ensembl_genes.start AND p7_platform.wgs_comgen_variant.stop <= public_hg19.ensembl_genes.stop) AND (p7_platform.wgs_comgen_variant.sample_id = '%M' OR p7_platform.wgs_comgen_variant.sample_id = '%F' OR p7_platform.wgs_comgen_variant.sample_id = '%NB') AND (public_hg19.ensembl_genes.gene_name = 'BRCA1' OR public_hg19.ensembl_genes.gene_name = 'TRT1') OR (public_hg19.ensembl_genes.gene_name LIKE 'SON%' OR public_hg19.ensembl_genes.gene_name LIKE 'HOX%')) AND p7_platform.wgs_comgen_variant.gt = 'hom' AND p7_platform.wgs_comgen_variant.chrom = '8'\n"
+       ]
+      }
+     ],
      "input": [
       "# function to create list of columns to return\n",
       "def get_cols(db, col_arg):\n",
+      "    '''\n",
+      "    :param db: name of database to return columns from (search_db or annot_db)\n",
+      "    :param col_arg: name of variable containing a list of column names to return\n",
+      "    :return: list of columns to add to a SELECT columns FROM statement\n",
+      "    '''\n",
       "    if col_arg == 'all':\n",
       "        col_query = '{0}.*'.format(db)\n",
       "    else:\n",
@@ -702,12 +724,9 @@
       "# merge all query statements \n",
       "col_statement = get_cols(search_db, search_db_cols) + \", \" + get_cols(annot_db, annot_db_cols)\n",
       "\n",
-      "# write beginning of query\n",
-      "inner_start = \"SELECT {} FROM {}, {} \".format(col_statement, search_db, annot_db)\n",
-      "left_start = \"SELECT {} FROM {} LEFT JOIN {} \".format(col_statement, search_db, annot_db)\n",
       "\n",
       "# check if tables contain start/stop or pos, and ref columns\n",
-      "def get_colnames(cursor, table_name, print_out=True):\n",
+      "def check_colnames(cursor, table_name, print_out=True):\n",
       "    cur.execute('DESCRIBE {0}'.format(table_name))\n",
       "    info = cur.fetchall()\n",
       "    cols = []\n",
@@ -716,8 +735,8 @@
       "    return cols\n",
       "\n",
       "# list columns in selected databases\n",
-      "annot_cols = get_colnames(cur, annot_db, print_out=True)\n",
-      "platform_cols = get_colnames(cur, search_db, print_out=True)\n",
+      "annot_cols = check_colnames(cur, annot_db, print_out=True)\n",
+      "platform_cols = check_colnames(cur, search_db, print_out=True)\n",
       "\n",
       "# function to match cgi with annot_db\n",
       "def join_annot_to_cgi(annot_db):\n",
@@ -816,15 +835,17 @@
       "else:\n",
       "    \"Check your arguments for search_db, annot_db and platform.\"\n",
       "\n",
-      "# create innor or left join query\n",
+      "# create inner or left join query\n",
       "if query_type == 'annot':\n",
-      "    query_and_join = left_start + using_match + table_match.replace('AND', \"WHERE\", 1) + \\\n",
+      "    frankenquery = \"SELECT {} FROM {} LEFT JOIN {} \".format(col_statement, search_db, annot_db) + using_match + table_match.replace('AND', \"WHERE\", 1) + \\\n",
       "                impala_query.replace(\"WHERE\", \"AND\", 1)\n",
       "if query_type == 'filter':\n",
-      "    query_and_join = inner_start + impala_query + table_match"
+      "    frankenquery = \"SELECT {} FROM {}, {} \".format(col_statement, search_db, annot_db) + impala_query + table_match\n",
+      "    \n",
+      "print frankenquery"
      ],
      "language": "python",
-     "prompt_number": 20
+     "prompt_number": 46
     },
     {
      "cell_type": "heading",
