Finished nbs queries,  updtating comp-het function, waiting to add VEP annotation

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -672,7 +672,7 @@
       "for query in query_list:\n",
       "    merge_query(query, final_query)\n",
       "\n",
-      "print impala_query\n"
+      "print impala_query"
      ],
      "language": "python",
      "prompt_number": 50
