running snpeff on parent variants

--- a/Annotation Scripts/PharmGKB/PharmGKB_vars.ipynb
+++ b/Annotation Scripts/PharmGKB/PharmGKB_vars.ipynb
@@ -80,7 +80,7 @@
       "print pharm_gkb.head()"
      ],
      "language": "python",
-     "prompt_number": 100
+     "prompt_number": 108
     },
     {
      "cell_type": "code",
@@ -88,12 +88,10 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "pharm_gkb_genes = open(\"pharmgkb_list.txt\", \"w\")\n",
-      "pharm_gkb_genes.write(str(pharm_gkb['gene'].value_counts()))\n",
-      "pharm_gkb_genes.close()"
+      "pd.DataFrame(pharm_gkb['gene'].unique()).to_csv('pharmGKB_genes.txt')"
      ],
      "language": "python",
-     "prompt_number": 103
+     "prompt_number": 115
     },
     {
      "cell_type": "code",
