re-worked snpeff matching by adding variant position to info dataframe. need to check results. complete adding all functions to module.

--- a/clarity/clarity_acmg..ipynb
+++ b/clarity/clarity_acmg..ipynb
@@ -261,7 +261,7 @@
       "    annot_vcf = pd.read_csv(input_vcf, sep='\\t', skiprows=8)\n",
       "    # split info field into separate rows for each transcript\n",
       "    info_df = pd.Series([j for i in annot_vcf['INFO'].str.split(',') for j in i])\n",
-      "    # split each rown into separate columns by the pipe\n",
+      "    # split each row into separate columns by the pipe\n",
       "    info_df = pd.DataFrame(list(info_df.str.split('|')))\n",
       "    # drop emtpy/unnecessary columns\n",
       "    info_df = info_df[list(info_df.columns[0:11])]\n",
