fixed connection with ibis, working on spliltting input by chromosome and processing in parallel

--- a/add_annots/annotate_pipeline..ipynb
+++ b/add_annots/annotate_pipeline..ipynb
@@ -22,7 +22,7 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Read in Distinct Variants"
+      "Connect to Required Impala Tables"
      ]
     },
     {
@@ -32,10 +32,14 @@
      "outputs": [],
      "input": [
       "from impala.dbapi import connect\n",
-      "from impala.util import as_pandas"
+      "from impala.util import as_pandas\n",
+      "import pandas as pd\n",
+      "import os\n",
+      "import ibis\n",
+      "import sh"
      ],
      "language": "python",
-     "prompt_number": 1
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -43,22 +47,60 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "# select all distinct variants\n",
-      "get_distinct_query = \"\"\"\n",
-      "    SELECT * FROM users_selasady.distinct_test\n",
-      "    \"\"\"\n",
-      "# run query on impala\n",
-      "conn=connect(host='glados19', port=21050, timeout=120)\n",
-      "cur = conn.cursor()\n",
-      "cur.execute(get_distinct_query)\n",
+      "hdfs_port = os.environ.get('glados20', 50070)\n",
+      "hdfs = ibis.hdfs_connect(host='glados20', port=hdfs_port)\n",
+      "con = ibis.impala.connect(host='glados19', port=21050, timeout=120,hdfs_client=hdfs)\n",
       "\n",
-      "# store results as pandas data frame\n",
-      "distinct_df = as_pandas(cur)\n",
-      "cur.close()\n",
-      "conn.close()"
+      "# enable interactive mode\n",
+      "ibis.options.interactive = True"
      ],
      "language": "python",
-     "prompt_number": 4
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "# connect to tables TODO: add all tables later after running external programs\n",
+      "#clinvar = con.table('clinvar', database='p7_ref_grch37')\n",
+      "distinct_vars = con.table('distinct_test', database='users_selasady')"
+     ],
+     "language": "python",
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Split By Chromosome for Parallel Processing"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "# TODO groupby chrom and parallel process \n",
+      "chr1 = distinct_vars[(distinct_vars['chrom'] == '1')]"
+     ],
+     "language": "python",
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "for line in sh.tr(sh.tail(\"-f\", chr1, _piped=True), \"[:upper:]\", \"[:lower:]\", _iter=True):\n",
+      "    print(line)"
+     ],
+     "language": "python",
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -66,18 +108,43 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "10000 distinct variants downloaded from impala.\n"
+       "ename": "PandasError",
+       "evalue": "DataFrame constructor not properly called!",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+        "\u001b[0;31mPandasError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-41-0f32404d5038>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistinct_vars\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    275\u001b[0m                                          copy=False)\n\u001b[1;32m    276\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mPandasError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DataFrame constructor not properly called!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmgr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfastpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mPandasError\u001b[0m: DataFrame constructor not properly called!"
        ]
       }
      ],
      "input": [
-      "print str(len(distinct_df)) + ' distinct variants downloaded from impala.'"
+      "print chr1"
      ],
      "language": "python",
-     "prompt_number": 9
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     },
     {
      "cell_type": "code",
@@ -93,12 +160,7 @@
       }
      ],
      "input": [
-      "# sort the dataframe\n",
-      "distinct_df.sort(columns=['chrom'], inplace=True)\n",
-      "# set the index to chrom\n",
-      "distinct_df.set_index(keys=['chrom'], drop=False,inplace=True)\n",
-      "# get a list of chromosomes\n",
-      "names=distinct_df['chrom'].unique()"
+      ""
      ],
      "language": "python",
      "prompt_number": 7
