--- a/etl_pipeline.ipynb
+++ b/etl_pipeline.ipynb
@@ -62,7 +62,10 @@
      "input": [
       "# connect to a table\n",
       "clinvar = con.table('clinvar', \n",
-      "                     database='p7_ref_grch37')"
+      "                     database='p7_ref_grch37')\n",
+      "\n",
+      "# view first five records\n",
+      "print clinvar.limit(5)"
      ],
      "language": "python",
      "prompt_number": 38
